# wsemCode

./: CMakeLists.txt  README.md  blink.c  dataUtf8v1.csv
Analyse/: berAnalyse.py  data.csv
Emitter/: settings.html  status.html
MicroPython/: Webserver.py  data.csv  dataUtf8v1.csv
MicroPython/Analyse/: berAnalyse.py  text2.txt  text3.txt
MicroPython/Emitter/: UrlEscapeCodes.txt  boot.py  index.html  response.html  settings.html  status.html  test.py
MicroPython/Receiver/: boot.py  data.csv  history.html  index.html  r.py  sensorVolt.py  settings.html
MicroPython/Reciver/: boot.py  sensorVolt.py
Receiver/: boot.py  index.html  sensorVolt.py  settings.html
emitter/: CMakeLists.txt  boot.c  boot.cpp
emitter/embedded/: Laser.hpp
reciver/: CMakeLists.txt  boot.c
